chore: rebase & bump to java 25